# wink

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  justfile  sqlx-data.json
backend/: Cargo.toml
backend/src/: main.rs
db/migrations/: 202304211315_create-links-table.sql
frontend/src/routes/: [...404].tsx  index.tsx
frontend/src/routes/api/: url.ts
migrations/: 202305151712_create_winks.sql  202305160842_create_user.sql  202305191239_create_sessions.sql
src/: components.rs  hasher.rs  main.rs  page.rs  utils.rs
src/static/: main.css
