[package]
name = "wink"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
maud = { version = "*", features = ["axum"] }

axum = "0.6"
axum-macros = "*"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "offline", "postgres" ] }

tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

lightningcss = "1.0.0-alpha.41"

dotenvy = "*"
